--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bluebird": "^3.7.2",
     "class-transformer": "^0.5.1",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.7",
     "edgedb": "^1.5.12",
     "neo4j-driver": "^5.28.0",
     "nestjs-command": "^3.1.4",
